# spike-lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  c_wrapper.c  spikelib.cpp
src/: spikelib.cpp  spikelib.h  tests.cpp
src/asm_examples/: call_to_misaligned.s  infinite_loop.s  infinite_loop_increment.s  load_misaligned.s  load_pc_relative_value.s  load_unmapped.s  mov_0_to_x5.s  store_misalligned.s  store_unmapped.s
